[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/Scene.gd" type="Script" id=1]
[ext_resource path="res://assets/win.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/mainFont.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/smallFont.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 47
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 23
use_filter = true
font_data = ExtResource( 4 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="Blocks" type="Node2D" parent="."]

[node name="WinScreen" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="WinScreen"]
margin_left = 24.0
margin_top = 16.0
margin_right = 658.0
margin_bottom = 160.0

[node name="BG" type="ColorRect" parent="WinScreen"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.545098 )

[node name="YouWinLabel" type="Label" parent="WinScreen/BG"]
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "YOU WIN!"
align = 1
valign = 1

[node name="TimeLabel" type="Label" parent="WinScreen/BG"]
margin_top = 325.0
margin_right = 1024.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 2 )
text = "TEMPO"
align = 1

[node name="Cam" type="Camera2D" parent="."]
rotating = true
current = true

[node name="WinSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 12.235

[node name="Tween" type="Tween" parent="."]
